--- a/gobotany/taxa/templates/gobotany/family.html
+++ b/gobotany/taxa/templates/gobotany/family.html
@@ -63,5 +63,5 @@ Family: {{ family.name }} {% if common_name %}({{ common_name|cut:"The "|lower }
 {% endblock %}
 
 {% block sidebar_content %}
-    {% include "simplekey/_sidebar_items.html" %}
+    {% include "gobotany/_sidebar_items.html" %}
 {% endblock %}
