--- a/gobotany/taxa/templates/gobotany/genus.html
+++ b/gobotany/taxa/templates/gobotany/genus.html
@@ -69,5 +69,5 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
 {% endblock %}
 
 {% block sidebar_content %}
-    {% include "simplekey/_sidebar_items.html" %}
+    {% include "gobotany/_sidebar_items.html" %}
 {% endblock %}
