Fix some styles on the species page. (#214)

--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -388,6 +388,10 @@ footer a[href]:hover { text-decoration: underline; }
 footer .nsf-logo { float: left; margin: 0 10px 0 7px; }
 footer .support { margin-right: 0; padding: 18px 0; }
 
+/* Breadcrumb trails */
+#breadcrumb p { color: #807121; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 14px; line-height: 160%; margin: 0 0 14px; }
+#breadcrumb span { color: #000; }
+
 /* Images (gallery with previous/next buttons, or single) */
 .img-gallery { float: left; margin: 0 10px 0 0; position: relative; width: 244px; }
 .img-gallery .img-container { height: 239px; overflow: hidden; position: relative; width: 239px; }
@@ -405,6 +409,20 @@ footer .support { margin-right: 0; padding: 18px 0; }
 #sb-counter { font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; }
 
 #sb-nav-close { background-position: center; background-repeat: no-repeat; padding: 4px; /* Increase activation area a bit */ right: -28px !important; /* Place at top right, but not exactly at the corner so as to avoid Flash video z-index problem */ top: 6px !important; }
+
+/* Character/value styles for plant preview popups, species pages, etc. */
+.characteristics { margin-bottom: 16px; }
+.characteristics dl { border: 1px transparent; /* border forces new row in WebKit when char name, but not value, wraps */ margin: 6px 0 0; padding: 0; }
+.characteristics dt { clear: left; float: left; line-height: 18px; text-align: right; text-transform: uppercase; width: 200px; }
+.characteristics dt:after { content: ':'; }
+.characteristics dd { line-height: 18px; margin-left: 210px; }
+.characteristics dd ul { list-style-type: disc; margin: 0; padding: 0 0 0 1.3em; text-indent: -0.2em; }
+.characteristics dd ul.compact { margin: 0; padding: 0; text-indent: 0; }
+.characteristics dd ul.compact li { display: inline; }
+.characteristics dd ul.compact li:not([class='last']):after { content: ', '; }
+.characteristics dd li { margin: 0; padding: 0 0 0.1em; }
+.characteristics.full dt { width: 270px; }
+.characteristics.full dd { margin-left: 280px; }
 
 /* Form error messages */
 .errorlist { color: #f00; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 14px; line-height: 14px; list-style-type: none; }
@@ -535,10 +553,12 @@ body.taxa#genus ul.species { font-size: 14px; }
 body.taxa#genus p.family { font-size: 14px; margin: 0; }
 body.taxa#genus .genus-species-btn { background: url(/static/images/layout/genus-btn.png) no-repeat scroll 0 0 transparent; clear: both; display: block; float: left; height: 32px; margin: 15px 0 0; text-indent: -9000px; width: 280px; }
 body.taxa#species { /* Larger gallery styles */ /* TODO: resolve the two following sections */ /* Smooth Div Scroll image area */ }
-body.taxa#species h1 span.origin { font-size: 14px; line-height: 100%; }
-body.taxa#species h3 { color: #807121; font-size: 30px; margin-bottom: 12px; }
-body.taxa#species #sb-player.html { background: #fff; overflow: hidden; /* Get rid of vertical scrollbar in WebKit on enlarged North America distribution map. */ padding: 0 5px 5px; }
+body.taxa#species #main h1 span.origin { font-size: 14px; line-height: 100%; }
+body.taxa#species #main h3 { color: #807121; font-size: 30px; line-height: 155%; margin-bottom: 12px; }
+body.taxa#species #main h5 { font-size: 14px; }
 body.taxa#species #main p { margin: 0 0 15px; }
+body.taxa#species #sb-player.html { background: #fff; overflow: hidden; /* Get rid of vertical scrollbar in WebKit on enlarged N. America dist. map. */ padding: 0 5px 5px; }
+body.taxa#species #sb-player #na-dist-county-map { background: #fff; height: 100%; width: 100%; }
 body.taxa#species .note { background: #c4bd93; border-bottom: 1px solid #ad9f50; border-top: 1px solid #ad9f50; color: #000; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 24px; margin-bottom: 0.5em; padding: 0.5em 0; text-align: center; width: 100%; }
 body.taxa#species a.description-control { background: url(/static/images/icons/plus.png) left 50% no-repeat; display: block; margin: 10px 0 12px 0; padding: 3px 0 3px 25px; }
 body.taxa#species ul.full-description { background: #fbfbf8; border: 1px solid #e1e1dc; display: none; margin: 0 0 15px 0; }
@@ -565,6 +585,8 @@ body.taxa#species a.enlarge img { vertical-align: middle; }
 body.taxa#species div.section.map p { font-size: 9px; margin-bottom: 6px; }
 body.taxa#species div.section.namap { position: relative; }
 body.taxa#species div.section.namap div.trans { /* Transparent div to make North America map object element clickable */ cursor: pointer; background: transparent; height: 133px; /* Cover the map plus the link below it */ margin-bottom: 0; padding: 0; position: absolute; top: 45px; width: 196px; }
+body.taxa#species div.section #ne-dist-county-map { /* SVG map: WebKit needs height and width set */ height: 293px; width: 187px; }
+body.taxa#species div.section #na-dist-county-map { /* SVG map: WebKit needs height and width set */ height: 109px; width: 187px; }
 body.taxa#species .img-gallery { float: none; margin: 0 0 0 0; width: 710px; }
 body.taxa#species .img-gallery .img-container { height: 273px; width: 710px; }
 body.taxa#species .img-gallery .frame { height: 239px; width: 700px; }
