--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -526,6 +526,20 @@ footer {
     }    
 }
 
+/* Breadcrumb trails */
+#breadcrumb {
+    p {
+        color: #807121;
+        font-family: $headings-font;
+        font-size: 14px;
+        line-height: 160%;
+        margin: 0 0 14px;
+    }
+    span {
+        color: #000;
+    }
+}
+
 /* Images (gallery with previous/next buttons, or single) */
 .img-gallery {
     float: left;
@@ -609,6 +623,61 @@ footer {
                                 corner so as to avoid Flash video z-index
                                 problem */
     top: 6px !important;
+}
+
+/* Character/value styles for plant preview popups, species pages, etc. */
+.characteristics {
+    margin-bottom: 16px;
+    dl {
+        border: 1px transparent; /* border forces new row in WebKit when
+                                  * char name, but not value, wraps */
+        margin: 6px 0 0;
+        padding: 0;
+    }
+    dt {
+        clear: left;
+        float: left;
+        line-height: 18px;
+        text-align: right;
+        text-transform: uppercase;
+        width: 200px;
+        &:after {
+            content: ':';
+        }
+    }
+    dd {
+        line-height: 18px;
+        margin-left: 210px;
+        ul {
+            list-style-type: disc;
+            margin: 0;
+            padding: 0 0 0 1.3em;
+            text-indent: -0.2em;
+            &.compact {
+                margin: 0;
+                padding: 0;
+                text-indent: 0;
+                li {
+                    display: inline;
+                    &:not([class='last']):after {
+                        content: ', ';
+                    }
+                }
+            }
+        }
+        li {
+            margin: 0;
+            padding: 0 0 0.1em;
+        }
+    }
+    &.full {
+        dt {
+            width: 270px;
+        }
+        dd {
+            margin-left: 280px;
+        }
+    }
 }
 
 /* Form error messages */
