--- a/gobotany/taxa/templates/gobotany/species.html
+++ b/gobotany/taxa/templates/gobotany/species.html
@@ -240,8 +240,8 @@
 
 {% block sidebar_content %}
                 <div class="section map">
-                    <h5>New England Distribution</h5>
-                    {% include "taxa/_map_attribution.html" %}
+                    <h4>New England Distribution</h4>
+                    {% include "gobotany/_map_attribution.html" %}
                     <!--[if !IE]>-->
                     <object
                         data="/api/maps/{{taxon.genus|lower}}-{{epithet}}-ne-distribution-map.svg"
@@ -264,8 +264,8 @@
                 </div>
 
                 <div class="section map namap">
-                    <h5>North America Distribution</h5>
-                    {% include "taxa/_map_attribution.html" %}
+                    <h4>North America Distribution</h4>
+                    {% include "gobotany/_map_attribution.html" %}
                     <div>
                         <object
                             data="/api/maps/{{taxon.genus|lower}}-{{epithet}}-na-distribution-map.svg"
@@ -293,14 +293,14 @@
                 </div>
 
                 <div class="section">
-                    <h5>Native to North America?</h5>
+                    <h4>Native to North America?</h4>
                     <p>{{ native_to_north_america }}</p>
                 </div>
 
                 {% with lookalikes=taxon.lookalikes.all %}
                 {% if lookalikes|length > 0 %}
                 <div class="section lookalikes">
-                    <h5>Sometimes Confused With:</h5>
+                    <h4>Sometimes Confused With:</h4>
                     <dl>
                     {% for lookalike in lookalikes %}
                     <dt><a href="/species/{{ lookalike.lookalike_scientific_name|lower|replace:' ,/' }}/"><em>{{ lookalike.lookalike_scientific_name }}</em></a>:</dt>
@@ -314,7 +314,7 @@
                 {% with taxon.synonyms.all as synonyms %}
                 {% if synonyms|length > 0 %}
                 <div class="section">
-                    <h5>Synonyms:</h5>
+                    <h4>Synonyms:</h4>
                     <ul>
                     {% for synonym in synonyms %}
                         <li>{{ synonym.full_name|italicize_plant|safe }}</li>
@@ -325,26 +325,26 @@
                 {% endwith %}
 
                 <div class="section">
-                    <h5>Family:</h5>
+                    <h4>Family:</h4>
                     <p><a href="{% url taxa-family taxon.family.slug %}"
                         >{{ taxon.family }}</a></p>
                 </div>
 
                 <div class="section">
-                    <h5>Genus:</h5>
+                    <h4>Genus:</h4>
                     <p><em><a href="{% url taxa-genus taxon.genus.slug %}"
                         >{{ taxon.genus }}</a></em></p>
                 </div>
 
                 {% if taxon.variety_notes %}
                 <div class="section">
-                    <h5>Notes on Subspecies and Varieties:</h5>
+                    <h4>Notes on Subspecies and Varieties:</h4>
                     <p>{{ taxon.variety_notes|italicize_plant|safe }}</p>
                 </div>
                 {% endif %}
                 
                 <div class="section">
-				    <h5 class="left help">Need Help?</h5>
+				    <h4 class="left help">Need Help?</h4>
                     <a href="{% url site-getting-started %}"
                         class="get-help-btn left">Get Help</a>
 			    </div>
