Fix styles and improve headings on the species page.
Use the site's regular second-level heading style (black, smaller) to
differentiate from the large brown common name style now that the
'Info from Flora Novae Angliae' heading can appear directly beneath
it. Move the 'Info from Novae Angliae' section into its own
partial template since it is used in more than one place. When
the page is displayed in D. Key mode, add a heading called
Images atop the scrolling gallery so the user can see where
the Novae Angliae info ends and the next section begins. (#214)

--- a/gobotany/site/templates/gobotany/_page_full_sidebar.html
+++ b/gobotany/site/templates/gobotany/_page_full_sidebar.html
@@ -6,6 +6,7 @@
 
 {% block body_content %}
 <div class="content">
+    {% block top_content %}{% endblock %}
     <div class="container">
         <div id="main"> 
             {% block main_content %}{% endblock %}
