--- a/gobotany/static/sass/_taxa.scss
+++ b/gobotany/static/sass/_taxa.scss
@@ -108,9 +108,12 @@ body.taxa {
     }
     &#species {
         #main {
-            h1 span.origin {
-                font-size: 14px;
-                line-height: 100%;
+            h1 {
+                margin-bottom: 0;
+                span.origin {
+                    font-size: 14px;
+                    line-height: 100%;
+                }
             }
             h3 {
                 color: #807121;
