--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -481,6 +481,7 @@ footer {
         margin-left: -543px;
         position: absolute;
         top: -47px;
+        z-index: -1;
     }
     .publisher, .navigation {
         float: left;
