Prevent species page common names from being glossarized.
This was a bug from the common-name markup change after the page move. (#214)

--- a/gobotany/taxa/templates/gobotany/species.html
+++ b/gobotany/taxa/templates/gobotany/species.html
@@ -56,7 +56,7 @@
                 <h1><span class="scientific">{{ scientific_name|italicize_plant|safe }}</span>
                     <span class="origin">{{ taxon.taxonomic_authority }}</span></h1>
                 {% if common_names %}
-                    <p class="common">{% for common_name in common_names %}{% if not forloop.first %}, {% endif %}{{ common_name }}{% endfor %}</p>
+                    <p class="common nogloss">{% for common_name in common_names %}{% if not forloop.first %}, {% endif %}{{ common_name }}{% endfor %}</p>
                 {% endif %}
 
                 {% if key == 'dichotomous' %}
